--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,7 +38,7 @@ spring:
     allow-bean-definition-overriding: true
 
 poetry:
-  base-dir: D:\Github\chinese-poetrys
+  base-dir: D:\Github\chinese-poetrys\
 
 
 
