--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
       test-on-return: false
       test-while-idle: true
       time-between-eviction-runs-millis: 60000
-      url: jdbc:mysql://192.168.0.102:3306/poetry?characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+      url: jdbc:mysql://127.0.0.1:3306/poetry?characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
       username: root
       password: root
   jackson:
@@ -39,12 +39,12 @@ spring:
 
 mybatis-plus:
   # 如果是放在resource目录 classpath:/mapper/*Mapper.xml
-  mapper-locations: classpath:/mapper/*.xml
+  mapper-locations: classpath*:/mapper/*.xml
   # 实体扫描，多个package用逗号或者分号分隔
   type-aliases-package: com.kixs.poetry.entity
   global-config:
     # 主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
-    id-type: 2
+    id-type: ID_WORKER_STR
     # 字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
     field-strategy: 2
     # 驼峰下划线转换
@@ -55,8 +55,6 @@ mybatis-plus:
     refresh-mapper: true
     # 数据库大写下划线转换
     # capital-mode=true
-    # Sequence序列接口实现类配置
-    key-generator: com.baomidou.mybatisplus.incrementer.OracleKeyGenerator
     # 逻辑删除配置（下面3个配置）
     logic-delete-value: 1
     logic-not-delete-value: 0
@@ -64,9 +62,12 @@ mybatis-plus:
     # 配置返回数据库(column下划线命名&&返回java实体是驼峰命名)，自动匹配无需as（没开启这个，SQL需要写as： select user_id as userId）
     map-underscore-to-camel-case: true
     cache-enabled: false
+    call-setters-on-nulls: true
+    jdbc-type-for-null: 'null'
 
 poetry:
-  base-dir: D:\Github\chinese-poetrys\
-
+  base-dir: D:\Github\chinese-poetry\
+logging:
+  config: classpath:logback-spring.xml
 
 
