--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,13 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.73</version>
         </dependency>
+
+        <!-- 简繁转换 -->
+        <dependency>
+            <groupId>com.spreada</groupId>
+            <artifactId>ZHConverter</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 <!--    <build>
