--- a/pom.xml
+++ b/pom.xml
@@ -112,10 +112,9 @@
         </dependency>
         
         <dependency>
-            <groupId>#maven.com.google.guava</groupId>
+            <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>18.0</version>
-            <type>pom</type>
         </dependency>
     </dependencies>
 
