--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <mybatisplus.version>3.2.0</mybatisplus.version>
         <druid.version>1.1.20</druid.version>
         <mysql.version>8.0.17</mysql.version>
+        <elasticsearch.version>7.9.2</elasticsearch.version>
     </properties>
 
     <dependencies>
@@ -34,6 +35,12 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.9.2</version>
         </dependency>
 
 
